--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,12 +9,12 @@ import ContactSection from "../components/ContactSection.astro";
 import CTASection from "../components/CTASection.astro";
 ---
 
-<Layout>
-  <HeroSection />
-  <SolutionsSection />
-  <AboutSection />
-  <CasesSection />
-  <BlogSection />
-  <ContactSection />
-  <CTASection />
+<Layout title="Imperial Net | Software a Medida" description="Automatizamos procesos y potenciamos tu PyME">
+    <HeroSection />
+    <SolutionsSection />
+    <AboutSection />
+    <CasesSection />
+    <BlogSection />
+    <ContactSection />
+    <CTASection />
 </Layout>
