Add testimonials and FAQ sections

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,9 @@ import HeroSection from "../components/HeroSection.astro";
 import SolutionsSection from "../components/SolutionsSection.astro";
 import AboutSection from "../components/AboutSection.astro";
 import CasesSection from "../components/CasesSection.astro";
+import Testimonials from "../components/Testimonials.astro";
 import BlogSection from "../components/BlogSection.astro";
+import FAQ from "../components/FAQ.astro";
 import ContactSection from "../components/ContactSection.astro";
 import CTASection from "../components/CTASection.astro";
 ---
@@ -14,7 +16,9 @@ import CTASection from "../components/CTASection.astro";
     <SolutionsSection />
     <AboutSection />
     <CasesSection />
+    <Testimonials />
     <BlogSection />
+    <FAQ />
     <ContactSection />
     <CTASection />
 </Layout>
