--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,7 +10,7 @@ import "../../public/css/navbar.css";
   data-aos-delay="100"
 >
   <div class="container">
-    <a class="navbar-brand d-flex align-items-center gap-2" href="#">
+    <a class="navbar-brand d-flex align-items-center gap-2" href="/">
       <img
         src="/img/logo.png"
         alt="Logo Imperial-Net"
