--- a/src/components/BlogSection.astro
+++ b/src/components/BlogSection.astro
@@ -11,7 +11,7 @@
             <p class="card-text text-white">
               Descubrí los beneficios tangibles de incorporar tecnología en tu negocio: eficiencia, control y crecimiento.
             </p>
-            <a href="#" class="text-white text-decoration-underline">Leer más</a>
+              <a href="/blog/por-que-digitalizar-tu-empresa" class="text-white text-decoration-underline">Leer más</a>
           </div>
         </div>
       </div>
@@ -24,7 +24,7 @@
             <p class="card-text text-white">
               Casos reales que muestran cómo reducir costos, minimizar errores y escalar procesos con soluciones simples.
             </p>
-            <a href="#" class="text-white text-decoration-underline">Leer más</a>
+              <a href="/blog/automatizacion-para-pymes" class="text-white text-decoration-underline">Leer más</a>
           </div>
         </div>
       </div>
@@ -37,7 +37,7 @@
             <p class="card-text text-white">
               Conocé qué factores tenés que considerar al desarrollar o contratar un sistema hecho para tu negocio.
             </p>
-            <a href="#" class="text-white text-decoration-underline">Leer más</a>
+              <a href="/blog/como-elegir-un-software-a-medida" class="text-white text-decoration-underline">Leer más</a>
           </div>
         </div>
       </div>
