--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../../layouts/BaseLayout.astro";
-import BlogCard from "./BlogCard.astro";
+import BlogCard from '../../components/BlogCard.astro';
 
 // Cargar todos los posts .md de la carpeta actual
 const posts = await Astro.glob("./*.astro");
