styles and responsive menu improveds

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -8,7 +8,7 @@
     <p class="lead mb-4" data-aos="fade-up" data-aos-delay="300">
       Automatizamos procesos, optimizamos tu tiempo y llevamos tu negocio al siguiente nivel con software personalizado.
     </p>
-    <a href="#empezar" class="btn-empezar" data-aos="zoom-in" >
+    <a href="#contacto" class="btn-empezar" data-aos="zoom-in" >
       Quiero digitalizar mi negocio
     </a>
   </div>
