--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -7,7 +7,7 @@
       <!-- Testimonio 1 -->
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="0">
         <div class="p-4 bg-secondary rounded h-100 shadow-lg text-center">
-          <img src="../../public/img/logos/coblan.png" alt="Federico Blanco" 
+          <img src="/img/logos/coblan.png" alt="Federico Blanco" 
                class="rounded-circle mb-3 border border-3 border-light" style="max-height: 60px;">
           <p class="fst-italic mb-3">
             “Gracias a ImperialNet pudimos automatizar tareas críticas. Ahora 
@@ -24,7 +24,7 @@
       <!-- Testimonio 2 -->
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="150">
         <div class="p-4 bg-secondary rounded h-100 shadow-lg text-center">
-          <img src="../../public/img/logos/imparable.png" alt="Ezequiel Cabrera" 
+          <img src="/img/logos/imparable.png" alt="Ezequiel Cabrera" 
                class="rounded-circle mb-3 border border-3 border-light" style="max-height: 60px;">
           <p class="fst-italic mb-3">
             “Su equipo entendió exactamente lo que necesitábamos. La solución 
@@ -41,7 +41,7 @@
       <!-- Testimonio 3 -->
       <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
         <div class="p-4 bg-secondary rounded h-100 shadow-lg text-center">
-          <img src="../../public/img/logos/sol-fotofashion.jpg" alt="Sol Schmidt" 
+          <img src="/img/logos/sol-fotofashion.jpg" alt="Sol Schmidt" 
                class=" mb-3 border border-3 border-light" style="max-height: 60px; width: 50px">
           <p class="fst-italic mb-3">
            “La experiencia fue excelente. Gracias a ImperialNet logramos potenciar nuestra presencia en el mercado, alcanzar a muchos más clientes y hacer crecer nuestro negocio.”
