--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -42,9 +42,21 @@ import "../../public/css/navbar.css";
           <a class="nav-link" href="#contacto">Contacto</a>
         </li>
       </ul>
-      <a href="#empezar" class="btn-empezar d-lg-inline-block ms-3"
+      <a href="#contacto" class="btn-empezar d-lg-inline-block ms-3"
         >Quiero digitalizar mi negocio</a
       >
     </div>
   </div>
 </nav>
+
+<script>
+  document.querySelectorAll('.navbar-nav .nav-link, .btn-empezar').forEach(function (link) {
+    link.addEventListener('click', function () {
+      const navbarCollapse = document.querySelector('.navbar-collapse');
+      if (navbarCollapse.classList.contains('show')) { // solo si está abierto
+        const bsCollapse = new bootstrap.Collapse(navbarCollapse, { toggle: false });
+        bsCollapse.hide();
+      }
+    });
+  });
+</script>
