--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,9 +12,13 @@ body {
   background-size: contain;
 }
 
-
+section {
+  scroll-margin-top: 100px; /* Ajustá según la altura de tu navbar */
+}
 /* hero section */
-
+#empezar {
+  scroll-margin-top: 120px; /* ajustá este valor a la altura real de tu navbar */
+}
 .hero-section {
   position: relative;
   height: 100vh;
